--- a/docs/spec/api.md.tmpl
+++ b/docs/spec/api.md.tmpl
@@ -122,6 +122,14 @@ reference and shouldn't be used outside the specification other than to
 identify a set of modifications.
 
 <dl>
+  <dt>m</dt>
+  <dd>
+    <ul>
+      <li>Moved tags/list to tags/_list with a redirection to the new URL when old one is used.</li>
+      <li>Added support for tags deletion</li>
+    </ul>
+  </dd>
+
   <dt>l</dt>
   <dd>
     <ul>
