docs: fix markup and broken links
Signed-off-by: David Karlsson <35727626+dvdksn@users.noreply.github.com>

--- a/docs/content/spec/api.md.tmpl
+++ b/docs/content/spec/api.md.tmpl
@@ -2,7 +2,7 @@
 title: "HTTP API V2"
 description: "Specification for the Registry API."
 keywords: registry, on-prem, images, tags, repository, distribution, api, advanced
-redirect_from:
+aliases:
   - /reference/api/registry_api/
 ---
 
